--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="/src/index.css">
+    <title>To Do List</title>
 </head>
 <body>
-    
+    <main>
+        <ul id="list">
+            <li>
+                <h3>Learn HTML</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn CSS</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn Javascript</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn React</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn Firebase</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn Node</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn ASync</h3> 
+                <input type="checkbox">
+            </li>
+            <li>
+                <h3>Learn APIs</h3> 
+                <input type="checkbox">
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
