Removed static html from index.html

--- a/index.html
+++ b/index.html
@@ -9,40 +9,7 @@
 </head>
 <body>
     <main>
-        <ul id="list">
-            <li>
-                <h3>Learn HTML</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn CSS</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn Javascript</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn React</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn Firebase</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn Node</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn ASync</h3> 
-                <input type="checkbox">
-            </li>
-            <li>
-                <h3>Learn APIs</h3> 
-                <input type="checkbox">
-            </li>
-        </ul>
+        <ul id="list"></ul>
     </main>
     <script type="module" src="./src/index/index.js"></script>
 </body>
